@@ -1,37 +1,44 @@
 package nostra.cosa.hotelbooking.config;
 
-import nostra.cosa.hotelbooking.auth.service.CustomAuthenticationProvider;
+import nostra.cosa.hotelbooking.auth.service.HotelBookingAuthenticationProvider;
+import nostra.cosa.hotelbooking.auth.service.HotelBookingAuthorizationService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.access.expression.method.DefaultMethodSecurityExpressionHandler;
+import org.springframework.security.access.expression.method.MethodSecurityExpressionHandler;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Configuration for application security.
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class ApplicationSecurityConfig {
 
-    private static final String[] AUTH_WHITELIST = {"/user/login", "/user/register"};
+    private static final String[] URL_WHITELIST = {"/user/login", "/user/register"};
 
-    @Value("${auth.origin.url}")
+    private static final String[] ALLOWED_METHODS = {"GET", "POST", "DELETE", "PUT", "PATCH"};
+
+    @Value("${authentication.origin.url}")
     private String authOriginUrl;
 
     @Autowired
-    private CustomAuthenticationProvider authProvider;
+    private HotelBookingAuthenticationProvider authProvider;
 
 
     @Bean
     public SecurityFilterChain configure(HttpSecurity http) throws Exception {
         http.authorizeHttpRequests()
-                .requestMatchers(AUTH_WHITELIST).permitAll()
+                .requestMatchers(URL_WHITELIST).permitAll()
                 .anyRequest().authenticated()
                 .and().csrf().disable()
                 .rememberMe()
@@ -42,12 +49,19 @@ public class ApplicationSecurityConfig {
 
     private CorsConfiguration setCorsConfiguration() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(authOriginUrl));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "DELETE", "PUT", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowedOrigins(List.of(authOriginUrl));
+        configuration.setAllowedMethods(List.of(ALLOWED_METHODS));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization"));
         return configuration;
+    }
+
+    @Bean
+    static MethodSecurityExpressionHandler methodSecurityExpressionHandler() {
+        DefaultMethodSecurityExpressionHandler expressionHandler = new DefaultMethodSecurityExpressionHandler();
+        expressionHandler.setPermissionEvaluator(new HotelBookingAuthorizationService());
+        return expressionHandler;
     }
 
 }
